# ArchiveTrail

./: .env.example  .gitignore  Dockerfile  Dockerfile.fix  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml
docs/: README.md  USER_GUIDE.md  diagrams.md
docs/wiki/: Architecture.md  Configuration-Guide.md  Database-Schema.md  Deployment-Guide.md  Home.md  Operations-Guide.md  VAST-Platform-Setup.md
functions/discover/: main.py
functions/offload/: main.py  requirements.txt
functions/verify_purge/: main.py
sql/: 001_create_schema.sql  002_create_tables.sql  003_seed_config.sql
src/archive_trail/: __init__.py  __main__.py  cli.py  config.py  db.py  events.py  helpers.py  queries.py  registry.py
src/archive_trail/functions/: __init__.py  discover.py  offload.py  verify_purge.py
tests/: test_config.py  test_events.py  test_helpers.py  test_registry.py
wiki/: Home.md
